# api-template

./: .env-example  README.md  pyproject.toml
app/: main.py
app/config/: settings.py
app/repositories/: base_repository.py
app/routes/api/: __init__.py
app/routes/v1/endpoints/: health.py  items.py
app/schemas/: item.py
app/services/: item_service.py
app/utils/: custom_logger.py
