[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-template"
version = "0.1.0"
description = "A template for creating a structured FastAPI application with a layered architecture"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.115.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.0",
    "uvicorn==0.24.0",
    "httpx==0.24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.280",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88 